# internal/models/common.go
@@ -1,5 +1,32 @@
 package models
 
+import (
+	"net/http"
+
+	"github.com/go-chi/render"
+)
+
+type ErrResponse struct {
+	Err            error `json:"-"`
+	HTTPStatusCode int   `json:"-"`
+
+	ErrorText string `json:"error,omitempty"`
+}
+
+func (e *ErrResponse) Render(w http.ResponseWriter, r *http.Request) error {
+	render.Status(r, e.HTTPStatusCode)
+	return nil
+}
+
+func ErrRender(err error, status int) render.Renderer {
+	return &ErrResponse{
+		Err: err,
+		HTTPStatusCode: status,
+
+		ErrorText:  err.Error(),
+	}
+}
+
 // @Description Pagination response info
 type Page struct {
 	PageNumber int // Number of returned page
